--- a/weather dashboard.html
+++ b/weather dashboard.html
@@ -11,8 +11,8 @@
     
     <h2>Current Weather</h2>
     <div>
-        <span>🌞</span> <!-- Placeholder for weather icon -->
-        <span>25°C</span> <!-- Placeholder for current temperature -->
+        <span>🌞</span> 
+        <span>25°C</span> 
     </div>
     <h3>Current Location: India</h3>
     
@@ -25,28 +25,28 @@
         </tr>
         <tr>
             <td>Mon</td>
-            <td>☁️</td> <!-- Placeholder for forecast icon -->
-            <td>20°C</td> <!-- Placeholder for Monday forecast -->
+            <td>☁️</td> 
+            <td>20°C</td> 
         </tr>
         <tr>
             <td>Tue</td>
-            <td>🌧️</td> <!-- Placeholder for forecast icon -->
-            <td>18°C</td> <!-- Placeholder for Tuesday forecast -->
+            <td>🌧️</td> 
+            <td>18°C</td> 
         </tr>
         <tr>
             <td>Wed</td>
-            <td>🌤️</td> <!-- Placeholder for forecast icon -->
-            <td>22°C</td> <!-- Placeholder for Wednesday forecast -->
+            <td>🌤️</td> 
+            <td>22°C</td> 
         </tr>
         <tr>
             <td>Thu</td>
-            <td>🌩️</td> <!-- Placeholder for forecast icon -->
-            <td>19°C</td> <!-- Placeholder for Thursday forecast -->
+            <td>🌩️</td> 
+            <td>19°C</td> 
         </tr>
         <tr>
             <td>Fri</td>
-            <td>🌈</td> <!-- Placeholder for forecast icon -->
-            <td>21°C</td> <!-- Placeholder for Friday forecast -->
+            <td>🌈</td> 
+            <td>21°C</td> 
         </tr>
     </table>
 
